# Dread

./: '  .gitignore  CMakeLists.txt
.cache/clangd/index/: Application.cpp.B2A8230CAD8DD3B9.idx  Application.h.6620322EF2CF500E.idx  context.c.17008E465B307A59.idx  glfw3.h.621B04BD43B268C7.idx  (+26 more)
GameEngine/: CMakeLists.txt
GameEngine/Core/: Application.cpp  Application.h  EntryPoint.cpp  FileReader.cpp  FileReader.h  Logger.cpp  Logger.h  Time.cpp  Time.h  Window.cpp  Window.h
GameEngine/Event/: Event.h  EventListener.cpp  EventListener.h  EventSystem.cpp  EventSystem.h  EventType.h
GameEngine/InputManager/: InputManager.cpp  InputManager.h
GameEngine/Renderer/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RequestHandler.cpp  RequestHandler.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  TriangleTest.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
GameEngine/Renderer/PrimitiveMeshes/: Cube.h  Pyramid.h  Sphere.h
GameEngine/Renderer/Primitives/: Cube.h
GameEngine/Renderer/RenderPasses/: GeometryPass.h  RenderPass.h
GameEngine/Renderer/Utils/: GltfLoader.cpp  GltfLoader.h
GameEngine/SceneManagement/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h
GameEngine/SceneManagement/Scripting/: Behavior.h
GameEngine/resources/: basic_frag.glsl  basic_vert.glsl
Sandbox/: CMakeLists.txt  CameraController.hpp  Game.cpp  Game.h  Sin.h  Spin.hpp
(+1 files in other folders)
